--- a/style.css
+++ b/style.css
@@ -79,12 +79,12 @@ img{
 }
 
 .caption{
-    padding: 0.5rem 0;
+    padding: 0.75rem 0;
 }
 
 h3{
-    padding: 0 0.5rem;
     font-size: 18px;
+    font-weight: bold;
 }
 
 
