--- a/style.css
+++ b/style.css
@@ -2,89 +2,117 @@ body{
     background-color: white;
 }
 
+/* NAVBAR */
 .navbar{
     border: none;
 }
 
-.btn{
-    font-size: 15px;
-    width: 70px;
-    height: 70%;
-    padding: none;
-    margin: none;
-    text-align: center;
-    border-radius: 3rem;
-}
+    .btn{
+        font-size: 15px;
+        width: 70px;
+        height: 70%;
+        padding: none;
+        margin: none;
+        text-align: center;
+        border-radius: 3rem;
+    }
 
-.form-control{
-    background-color: rgb(185, 185, 185);
-    height: 50px;
-    border-radius: 3rem;
-}
+    .form-control{
+        background-color: rgb(228, 228, 228);
+        height: 50px;
+        border-radius: 3rem;
+        border: none;
+    }
 
-.fa-pinterest{
-    color: red;
-    width: 100%;
-    height: 100%;
-}
+    .fa-pinterest{
+        color: red;
+        width: 100%;
+        height: 100%;
+    }
 
-.fa-bell{
-    color: grey;
-}
-.fa-bell:hover{
-    color: rgb(70, 68, 68);
-}
+    .fa-bell{
+        color: grey;
+    }
+    .fa-bell:hover{
+        color: rgb(70, 68, 68);
+    }
 
-.fa-comment-dots{
-    color: grey;
-}
-.fa-comment-dots:hover{
-    color: rgb(70, 68, 68);
-}
+    .fa-comment-dots{
+        color: grey;
+    }
+    .fa-comment-dots:hover{
+        color: rgb(70, 68, 68);
+    }
 
-.fa-user-circle{
-    color: grey;
-}
-.fa-user-circle:hover{
-    color: rgb(70, 68, 68);
-}
+    .fa-user-circle{
+        color: grey;
+    }
+    .fa-user-circle:hover{
+        color: rgb(70, 68, 68);
+    }
 
+
+/* PAGE CONTAINERS */
 .container {
     padding: 10px 15px;
   }
   
+
+/* USER INFO */
 .user{
     text-align: center;
     padding: 0 0.5rem;
 }
 
-span{
-    font-weight: bolder;
-}
+    span{
+        font-weight: bolder;
+    }
 
+
+/* CRUMBS */
 .crumbs{
-    padding: 1rem 4rem;
+    padding: 1rem 3rem;
+}
+    .fa-pen{
+        font-size: 20px;
+    }
+
+    .fa-upload{
+        margin: 0 2rem;
+        font-size: 20px;
+    }
+
+    .fa-sort{
+        margin: 0 2rem;
+        font-size: 20px;
+    }
+
+    .fa-plus{
+        font-size: 20px;
+    }
+
+
+/* PINS AND BOARDS*/
+a{
+    color: black;
 }
 
-.fa-upload{
-    margin: 0 2rem;
-}
+    a:hover{
+        color: red;
+        text-decoration: none;
+    }
 
-.fa-sort{
-    margin: 0 2rem;
-}
+    img{
+        border-radius: 1rem;
+    }
 
-img{
-    border-radius: 1rem;
-}
+    .caption{
+        padding: 0.75rem 0;
+    }
 
-.caption{
-    padding: 0.75rem 0;
-}
-
-h3{
-    font-size: 18px;
-    font-weight: bold;
-}
+    h3{
+        font-size: 18px;
+        font-weight: bold;
+    }
 
 
